# pokepoke-p

./: docker-compose.yml
mysql/db/mysql_conf/: default_authentication.cnf
mysql/db/mysql_data/: #ib_16384_0.dblwr  auto.cnf  binlog.000008  binlog.000009  binlog.000010  binlog.000011  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/db/mysql_data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql/db/mysql_data/first_db/: users.ibd
mysql/db/mysql_data/mysql/: general_log_494.sdi  slow_log_496.sdi
mysql/db/mysql_data/performance_schema/: accounts_426.sdi  binary_log_trans_470.sdi  cond_instances_363.sdi  data_lock_waits_442.sdi  data_locks_441.sdi  error_log_364.sdi  events_errors_su_420.sdi  events_errors_su_421.sdi  events_errors_su_422.sdi  events_errors_su_423.sdi  events_errors_su_424.sdi  events_stages_cu_392.sdi  events_stages_hi_393.sdi  events_stages_hi_394.sdi  events_stages_su_395.sdi  (+95 more)
mysql/db/mysql_init/: new_create.sql
pokepoke-rust/: .env  Cargo.toml
pokepoke-rust/migrations/2021-11-16-124117_create_posts/: up.sql
pokepoke-rust/src/: lib.rs  main1.rs  main2.rs  models.rs  schema.rs
pokepoke-rust/templates/: index.html
pokepoke-vue/: README.md  package-lock.json  package.json  vue.config.js
pokepoke-vue/src/: App.vue  const-data.js  main.js
pokepoke-vue/src/router/: index.js
(+28 files in other folders)
