[package]
name = "pokepoke-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0" #webフレームワーク
actix-web = "3.3.2" #webフレームワーク
askama = "0.10.5"
diesel = { version = "*", features = ["r2d2", "mysql", "chrono"] } #SQL接続 chronoとは？
dotenv = "0.15.0" #SQL接続環境設定
rand = "0.8.4" #乱数生成
thiserror = "1.0.25" #web接続エラーハンドリング
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "main1"
path = "src/main1.rs"

[[bin]]
name = "main2"
path = "src/main2.rs"

